<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_tasks"
            android:icon="@drawable/ic_tasks"
            android:title="@string/my_tasks" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat"
            android:title="@string/chat" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/my_profile" />
    </group>

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/nav_contactUs"
                android:icon="@drawable/ic_contact_us"
                android:onClick="contactUs"
                android:title="@string/contact_us" />
            <item
                android:id="@+id/nav_aboutUs"
                android:icon="@drawable/ic_about_us"
                android:onClick="aboutUs"
                android:title="@string/about_us" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:onClick="share"
                android:title="@string/share_app" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>
