<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NEWAddTaskActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/addTaskTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_a_new_task_caps"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/alloyink"
            android:textColor="@color/chill_purple"
            android:layout_marginTop="20dp"
            />
        <ImageView
            android:id="@+id/taskImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@id/addTaskTitle"
            android:layout_marginBottom="30dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/task"
            android:contentDescription="@string/task" />
        <EditText
            android:id="@+id/add_new_task"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_below="@id/taskImage"
            android:textAlignment="center"
            android:hint="@string/add_new_task"
            android:gravity="center_horizontal"
            android:textColor="@color/my_black"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relativeLayout1"
        android:layout_marginTop="30dp"
        >
        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginStart="70dp"
            android:text="@string/add_caps"
            android:textColor="@color/my_white"
            android:background="@color/myLightBlue"
            />
        <Button
            android:id="@+id/btnView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginStart="60dp"
            android:text="@string/view_tasks_caps"
            android:textColor="@color/my_white"
            android:background="@color/chill_purple"
            android:layout_toRightOf="@id/btnAdd"
            />

    </RelativeLayout>
</RelativeLayout>