<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewAddTaskFragment">

    <ImageView
        android:id ="@+id/task_logo"
        android:layout_width="400dp"
        android:layout_height="300dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/note_book"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/task_image"
        />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/task_logo"
        android:layout_marginTop="50dp"
        >
        <Button
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginStart="70dp"
            android:layout_centerHorizontal="true"
            android:text="@string/add_new_task"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/my_white"
            android:background="@color/myLightBlue"
            />
        <Button
            android:id="@+id/btnView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:text="@string/view_all_tasks"
            android:textColor="@color/my_white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@color/chill_purple"
            android:layout_below="@id/btnAdd"
            />

    </RelativeLayout>


</RelativeLayout>