<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.chat.ChatFragment">

    <TextView
        android:id="@+id/chatHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chat_header"
        android:textColor="@color/chill_purple"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/alloyink"
        android:gravity="center_horizontal"
        android:layout_marginStart="8dp" />
    <ImageView
        android:id="@+id/chatImage"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_below="@id/chatHeader"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/chat3"
        android:layout_marginStart="8dp" />
    <EditText
        android:id="@+id/editTextChat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/enter_username"
        android:textSize="16sp"
        android:background="@drawable/edittext_design"
        android:padding="10dp"
        android:layout_below="@id/chatImage"
        android:layout_marginTop="16dp"
        />
    <Button
        android:id="@+id/joinChatBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextChat"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/join_chat"
        android:textColor="@color/my_white"
        android:background="@color/colorPrimaryDark"
        />
    <TextView
        android:id="@+id/text_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/joinChatBtn"
        />
</RelativeLayout>